@@ -34,7 +34,7 @@
       <dependency>
           <groupId>net.dv8tion</groupId>
           <artifactId>JDA</artifactId>
-          <version>5.0.0-alpha.14</version>
+          <version>5.0.0-alpha.19</version>
           <exclusions>
             <exclusion>
                 <groupId>club.minnced</groupId>
@@ -56,22 +56,22 @@
     <dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.18.0</version>
+			<version>2.19.0</version>
     </dependency>
   <dependency>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
-  <version>2.13.3</version>
+  <version>2.13.4</version>
 </dependency>
 <dependency>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-annotations</artifactId>
-  <version>2.13.3</version>
+  <version>2.13.4</version>
 </dependency>
 <dependency>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-databind</artifactId>
-  <version>2.13.3</version>
+  <version>2.13.4</version>
 </dependency>
 <dependency>
   <groupId>com.googlecode.json-simple</groupId>
@@ -103,7 +103,7 @@
     <!-- jsoup HTML parser library @ https://jsoup.org/ -->
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
-      <version>1.15.2</version>
+      <version>1.15.3</version>
     </dependency>
     <dependency>
         <groupId>org.json</groupId>
@@ -113,7 +113,7 @@
   <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-slf4j-impl</artifactId>
-    <version>2.18.0</version>
+    <version>2.19.0</version>
  </dependency>
 <dependency>
   <groupId>org.apache.commons</groupId>
