@@ -4,7 +4,7 @@ import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.*;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
-
+import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import static com.charizardbot.main.Main.*;
 
 import java.util.List;
