@@ -1,7 +1,7 @@
 package com.charizardbot.main.commands;
 import com.charizardbot.main.Main;
 
-import net.dv8tion.jda.api.entities.MessageChannel;
+import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 public class PingCommand extends ListenerAdapter {
